# pcl_segmentation

./: .kinect.launch.swn  .kinect.launch.swo  CMakeLists.txt  README.md  package.xml
launch/: .kinect.launch.swp  kinect.launch  segmentation.launch
msg/: ObjectCluster.msg  ObjectClusters.msg
src/: pcl_node.cpp  pcl_node.cpp.autosave
